@@ -5,6 +5,7 @@ import static org.mybatis.dynamic.sql.SqlBuilder.select;
 
 import java.util.List;
 
+
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mybatis.dynamic.sql.render.RenderingStrategies;
@@ -19,7 +20,7 @@ import com.santalucia.example.infrastructure.entity.Employee;
 
 @MybatisTest
 @SqlMergeMode(MergeMode.MERGE)
-@Sql(scripts = { "/sql/schemas/employees-schema.sql" })
+@Sql(scripts = {"/sql/schemas/employees-schema.sql"})
 class EmployeeMapperTests {
 
 	@Autowired
@@ -37,9 +38,9 @@ class EmployeeMapperTests {
 
 		List<Employee> employees = employeesDaoMappers.selectMany(selectStatement);
 		assertThat(employees).isNotNull().hasSize(1);
-		assertThat(employees.get(0).getFirstName()).isEqualTo("firstname");
-		assertThat(employees.get(0).getLastName()).isEqualTo("lastname");
-		assertThat(employees.get(0).getEmailAddress()).isEqualTo("a@a.com");
+		assertThat(employees.getFirst().getFirstName()).isEqualTo("firstname");
+		assertThat(employees.getFirst().getLastName()).isEqualTo("lastname");
+		assertThat(employees.getFirst().getEmailAddress()).isEqualTo("a@a.com");
 	}
 
 }
